<resources>
    <string name="app_name">Bluedot Minimal Integration</string>
    <string name="foreground_notification_title">Location Based Notifications</string>
    <string name="foreground_notification_text">--PLEASE CHANGE-- This app is utilizing the location to trigger alerts in both background and foreground modes when you visit your favourite locations.</string>
  <string name="initialize">Initialize</string>
  <string name="reset">Reset</string>
  <string name="start_geo_trigger">Start Geo-Trigger</string>
  <string name="stop_geo_trigger">Stop Geo-Trigger</string>
  <string name="start_tempo">Start Tempo</string>
  <string name="stop_tempo">Stop Tempo</string>
    <string name="chat_ai">Brain Chat AI</string>
    <string name="start_a_new_chat">Start a new conversation</string>
    <string name="received_message">Received Message</string>
    <string name="sent_message">Message Sent</string>
    <string name="like_button">Like button</string>
    <string name="dislike_button">Dislike button</string>
</resources>
