<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="au.com.bluedot.minimalintegration.MainActivity">


    <Button
        android:id="@+id/bInit"
        android:layout_marginTop="32dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/initialize"
        android:onClick="onClick"/>
    <Button
        android:id="@+id/bReset"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:onClick="onClick"
        android:layout_marginBottom="32dp"/>



    <Button
        android:id="@+id/bStartGeoT"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_geo_trigger"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/bStopGeoT"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_geo_trigger"
        android:onClick="onClick"
        android:layout_marginBottom="32dp" />



    <Button
        android:id="@+id/bStartTempo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_tempo"
        android:onClick="onClick" />

    <Button
        android:id="@+id/bStopTempo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_tempo"
        android:onClick="onClick"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/bBrainChatAI"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/chat_ai"
        android:onClick="onClick" />
</LinearLayout>
